add check integrity to jabkit